prevent headings from overlapping menu button

--- a/app/components/PageHeader.module.scss
+++ b/app/components/PageHeader.module.scss
@@ -7,3 +7,7 @@
   width: 100%;
   min-height: fluid(100, 300, $sm, $xxl);
 }
+
+.hgroup {
+  width: calc(100% - 120px);
+}
